<resources>
    <string name="app_name">calculator_UI</string>
    <string name="_1_000_2_2_2">1.000 * 2 + 2 * 2</string>
    <string name="result">=\n2004</string>
    <string name="ac">AC</string>
    <string name="minus">+/-</string>
    <string name="mod">%</string>
    <string name="div">÷</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mul">X</string>
    <string name="sub">-</string>
    <string name="plus">+</string>
</resources>