<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#074B77"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="14dp"
        android:background="@drawable/background_one"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_sunny">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:background="@drawable/background_sunny"
                android:src="@drawable/outline_wb_sunny_24"/>

            <ImageView
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:background="@drawable/dark"
                android:src="@drawable/outline_dark_mode_24"/>
        </LinearLayout>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_restore_24"
            android:layout_gravity="right"
            android:layout_marginTop="16dp">
        </ImageView>
        <TextView
            android:layout_marginTop="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_000_2_2_2"
            android:gravity="end"
            android:textColor="#989595"
            android:textSize="20sp"
            android:paddingRight="8dp"
            android:layout_gravity="right">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:gravity="end"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingRight="8dp"
            android:textColor="@color/white">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_two"
        android:orientation="vertical"
        android:paddingTop="26dp">
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_margin="10dp"
    android:paddingTop="20dp">

    <Button
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac"
        android:textColor="#000000"
        app:backgroundTint="#F8F7FA">
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"
        style="@style/buttons"
        android:textColor="#000000"
        app:backgroundTint="#F8F7FA">
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mod"
        style="@style/buttons"
        android:textColor="#000000"
        app:backgroundTint="#F8F7FA">
    </Button>

   <ImageView
       android:layout_width="50dp"
       android:layout_height="60dp"
       android:src="@drawable/baseline_backspace_24"
       app:tint="#1B6A9C">
   </ImageView>
</LinearLayout>
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="8dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                style="@style/buttons">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                style="@style/buttons">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                style="@style/buttons">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mul"
                style="@style/buttons"
                android:textColor="@color/black"
                app:backgroundTint="#F8F7FA">
            </Button>
        </LinearLayout>
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="8dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                style="@style/buttons"
                >
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
               style="@style/buttons">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                style="@style/buttons">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub"
                style="@style/buttons"
                android:textColor="@color/black"
                app:backgroundTint="#F8F7FA"
                >
            </Button>
        </LinearLayout>
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="8dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                style="@style/buttons"
                >
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                style="@style/buttons">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three"
                style="@style/buttons">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                style="@style/buttons"
                android:textColor="@color/black"
                app:backgroundTint="#F8F7FA">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                style="@style/buttons">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/dot"
                style="@style/buttons">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_sunny"
                android:text="@string/minus"
                style="@style/buttons">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                style="@style/buttons"
                android:textColor="@color/black"
                app:backgroundTint="#F8F7FA">
            </Button>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>